# kaggle_projects

./: .gitignore  Untitled.ipynb  pyproject.toml  whale_and_dolphin_predict.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
deep_learning_tutorial/: deep_learning_101.ipynb
heart_disease/: heart_disease.ipynb
whale_and_dolphin/: whale_and_dolphin_predict.ipynb
