[tool.poetry]
name = "kaggle_whale_and_dolpfin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
torch = "^1.11.0"
jupyter = "^1.0.0"
scikit-image = "^0.19.2"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
