[tool.poetry]
name = "kaggle_whale_and_dolpfin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
torch = "^1.11.0"
jupyter = "^1.0.0"
scikit-image = "^0.19.2"
torchvision = "^0.12.0"
kaggle = "^1.5.12"
scipy = "^1.8.0"
seaborn = "^0.11.2"
pyjanitor = "^0.22.0"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
